[EFL] REGRESSION (r128274): fast/overflow/overflow-height-float-not-removed-crash.html https://bugs.webkit.org/show_bug.cgi?id=96619

Patch by Mikhail Pozdnyakov <mikhail.pozdnyakov@intel.com> on 2012-09-13
Reviewed by Kenneth Rohde Christiansen.

ThemePartCacheEntry::create() can return '0' if creation fails, this was not checked
while Theme Part cache populating. A NULL pointer was dereferenced then causing crash.

Test: fast/overflow/overflow-height-float-not-removed-crash.html.

* platform/efl/RenderThemeEfl.cpp:
(WebCore::RenderThemeEfl::getThemePartFromCache):

git-svn-id: svn://svn.chromium.org/blink/trunk@128431 bbb929c8-8fbe-4397-9dbb-9b2b20218538